@@ -5,10 +5,9 @@ import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -23,7 +22,7 @@ public class ConfigurationTest
         final Configuration config = ConfigurationImpl.create( source );
 
         assertNotNull( config );
-        assertEquals( false, config.exists( "key1" ) );
+        assertFalse( config.exists( "key1" ) );
         assertNull( config.get( "key1" ) );
         assertEquals( "value1", config.getOrDefault( "key1", "value1" ) );
         assertNull( config.get( "key1", Integer.class ) );
@@ -36,12 +35,12 @@ public class ConfigurationTest
     @Test
     public void testConfig()
     {
-        final Map<String, String> source = ImmutableMap.of( "key1", "value1", "key2", "33" );
+        final Map<String, String> source = Map.of( "key1", "value1", "key2", "33" );
         final Configuration config = ConfigurationImpl.create( source );
 
         assertNotNull( config );
-        assertEquals( true, config.exists( "key1" ) );
-        assertEquals( false, config.exists( "key3" ) );
+        assertTrue( config.exists( "key1" ) );
+        assertFalse( config.exists( "key3" ) );
         assertEquals( "value1", config.get( "key1" ) );
         assertEquals( "value1", config.getOrDefault( "key1", "value3" ) );
         assertEquals( "value3", config.getOrDefault( "key3", "value3" ) );
@@ -56,15 +55,15 @@ public class ConfigurationTest
     @Test
     public void testSubConfig()
     {
-        final Map<String, String> source = ImmutableMap.of( "key1", "value1", "my.key2", "value2" );
+        final Map<String, String> source = Map.of( "key1", "value1", "my.key2", "value2" );
         final Configuration config1 = ConfigurationImpl.create( source );
 
         final Configuration config2 = config1.subConfig( "my." );
 
         assertNotNull( config2 );
         assertNotSame( config1, config2 );
-        assertEquals( false, config2.exists( "key1" ) );
-        assertEquals( true, config2.exists( "key2" ) );
+        assertFalse( config2.exists( "key1" ) );
+        assertTrue( config2.exists( "key2" ) );
 
         final Map<String, String> map = config2.asMap();
         assertEquals( 1, map.size() );
@@ -73,18 +72,18 @@ public class ConfigurationTest
     @Test
     public void testEquals()
     {
-        final Map<String, String> source1 = ImmutableMap.of( "key1", "value1", "key2", "value2" );
+        final Map<String, String> source1 = Map.of( "key1", "value1", "key2", "value2" );
         final Configuration config1 = ConfigurationImpl.create( source1 );
 
-        final Map<String, String> source2 = ImmutableMap.of( "key2", "value2", "key1", "value1" );
+        final Map<String, String> source2 = Map.of( "key2", "value2", "key1", "value1" );
         final Configuration config2 = ConfigurationImpl.create( source2 );
 
-        final Map<String, String> source3 = ImmutableMap.of( "key1", "value1" );
+        final Map<String, String> source3 = Map.of( "key1", "value1" );
         final Configuration config3 = ConfigurationImpl.create( source3 );
 
-        assertTrue( config1.equals( config2 ) );
-        assertTrue( config2.equals( config1 ) );
-        assertFalse( config3.equals( config1 ) );
-        assertFalse( config3.equals( config2 ) );
+        assertEquals( config1, config2 );
+        assertEquals( config2, config1 );
+        assertNotEquals( config3, config1 );
+        assertNotEquals( config3, config2 );
     }
 }
